CREATE TYPE "BookStatus" AS ENUM (
  'available',
  'loaned',
  'maintenance',
  'lost'
);

CREATE TYPE "Condition" AS ENUM (
  'good',
  'average',
  'poor'
);

CREATE TABLE "books" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "created_at" TIMESTAMPTZ DEFAULT (now()),
  "openlibrary_id" varchar UNIQUE NOT NULL,
  "name" varchar NOT NULL,
  "author_id" INTEGER NOT NULL REFERENCES authors(id),
  "description" TEXT,
  "first_publish_year" INTEGER,
  "editions" INTEGER,
  "num_pages" INTEGER
);

CREATE TABLE "book_copies" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "book_id" INTEGER NOT NULL,
  "barcode" VARCHAR(50) UNIQUE NOT NULL,
  "status" "BookStatus" NOT NULL DEFAULT 'available',
  "condition" "Condition" NOT NULL DEFAULT 'good',
  "acquired_at" TIMESTAMPTZ DEFAULT (now())
);

CREATE TABLE "book_authors" (
  "book_id" INTEGER REFERENCES "books"(id),
  "author_id" INTEGER REFERENCES "authors"(id),
  PRIMARY KEY ("book_id", "author_id")
);

CREATE TABLE "authors" (
  "id" int PRIMARY KEY NOT NULL,
  "created_at" TIMESTAMPTZ DEFAULT (now()),
  "name" VARCHAR NOT NULL
);

CREATE TABLE "genres" (
  "id" int PRIMARY KEY NOT NULL,
  "name" VARCHAR UNIQUE NOT NULL,
  "created_at" TIMESTAMPTZ DEFAULT (now())
);

CREATE TABLE "book_genres" (
  "book_id" INTEGER REFERENCES "books"(id),
  "genre_id" INTEGER REFERENCES "genres"(id),
  PRIMARY KEY ("book_id", "genre_id")
);

CREATE TABLE "users" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "cpf" CHAR(11) UNIQUE NOT NULL,
  "name" VARCHAR NOT NULL,
  "created_at" TIMESTAMPTZ DEFAULT (now())
);

CREATE TABLE "book_loans" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "user_id" INTEGER REFERENCES "users"(id),
  "book_copy_id" INTEGER REFERENCES "book_copies"(id),
  "loan_date" TIMESTAMPTZ DEFAULT (now()),
  "due_date" TIMESTAMPTZ,
  "returned_at" TIMESTAMPTZ
);